--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "thinglish.transformer",
+  "namespace":"tla.EAM",
   "version": "0.1.0",
   "description": "",
   "author": "",
   "license": "AGPL-3.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ONCE-DAO/thinglish.transformer.git"
