--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "version": "0.1.1",
   "description": "transform classes to reflective components",
   "main": "dist/main.js",
-
   "author": "Marcel Donges",
   "license": "AGPL-3.0",
-  "main": "dist/main.js",
-
   "scripts": {
     "prepare": "ts-patch install",
-    "test": "jest"
+    "test": "jest",
+    "compTest": "npx tsc ; cd transformer-test; npx tsc"
   },
   "repository": {
     "type": "git",
@@ -22,6 +20,7 @@
   },
   "homepage": "https://github.com/ONCE-DAO/thinglish.transformer#readme",
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "typescript": "^4.5.4"
   },
   "dependencies": {
