--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "prepare": "ts-patch install",
+    "start": "cd transformer-test && npx tsc",
     "test": "jest",
     "compTest": "npx tsc ; cd transformer-test; npx tsc"
   },
