--- a/code-examples/package.json
+++ b/code-examples/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.6",
-    "typescript": "^4.5.4"
+    "typescript": "4.7.2"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5",
