--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "homepage": "https://github.com/ONCE-DAO/thinglish.transformer#readme",
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "typescript": "^4.7.2"
+    "typescript": "4.7.2"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5",
