--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "./../../../../../../tsconfig",
+  "extends": "../../../../../tsconfig",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "../../dist/thinglish.transformer/merge", 
+    "outDir": "../../../../../Scenarios/localhost/tla/EAM/Thinglish.Transformer/main/",
     "module": "commonjs",
   },
   "include": [
