--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thinglish-transformer",
+  "name": "thinglish.transformer",
   "namespace": "tla.EAM",
   "version": "0.1.1",
   "description": "transform classes to reflective components",
