--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "transformer",
+  "name": "Transformer",
   "namespace": "tla.EAM.Thinglish",
   "version": "0.1.1",
   "description": "transform classes to reflective components",
