--- a/code-examples/package.json
+++ b/code-examples/package.json
@@ -6,7 +6,7 @@
   "main": "dist/main.js",
   "scripts": {
     "prepare": "ts-patch install",
-    "start": "cd .. && npx tsc && cd transformer-test && npx tsc",
+    "start": "cd .. && npx tsc && cd code-examples && npx tsc",
     "test": "jest"
   },
   "author": "",
