--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Transformer",
   "namespace": "tla.EAM.Thinglish",
-  "version": "0.1.1",
+  "version": "build",
   "description": "transform classes to reflective components",
-  "main": "dist/main.js",
+  "main": "index.cjs",
   "onceDependencies": [],
   "author": "Marcel Donges",
   "license": "AGPL-3.0",
@@ -17,12 +17,12 @@
   "homepage": "https://github.com/ONCE-DAO/thinglish.transformer#readme",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "ts-patch": "^2.0.1",
     "typescript": "4.7.2"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "github:rbuckton/reflect-metadata",
-    "rimraf": "^3.0.2",
-    "ts-patch": "^2.0.1"
+    "rimraf": "^3.0.2"
   }
 }
