--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Transformer",
   "namespace": "tla.EAM.Thinglish",
-  "version": "0.1.1",
+  "version": "merge",
   "description": "transform classes to reflective components",
   "main": "dist/main.js",
   "onceDependencies": [],
