--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "../../../../../../tsconfig.build.json",
+  // "extends": "../../../../../../tsconfig.build.json",
   "compilerOptions": {
     "rootDir": "src",
     "module": "commonjs",
+    "target": "ES2016",
+    "declaration": true,
+    "declarationMap": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true, /* Ensure that casing is correct in imports. */
+    "strict": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
